--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+      <title>Elplect's Blog</title>
+      <meta
+              name="keywords"
+              content="博客,blog,二次元博客"
+      />
+      <link rel="stylesheet" href="./static/css/loading.css" />
   </head>
   <body>
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app"></div>
+    <div id="app">
+        <div class="first-loading-wrp">
+            <div class="loading-wrp">
+          <span class="dot dot-spin">
+            <i></i>
+            <i></i>
+            <i></i>
+            <i></i>
+          </span>
+            </div>
+            <h1>博客加载中...</h1>
+        </div>
+    </div>
     <!-- built files will be auto injected -->
   </body>
 </html>
